enh: changed the toast body color

--- a/dashboard/assets/style.css
+++ b/dashboard/assets/style.css
@@ -119,6 +119,7 @@
 .my-toast {
     width: 100%;
     height: fit-content;
+    background-color: #303030;
 }
 
 /* dbc.accordion styling parameters*/
