--- a/dashboard/assets/style.css
+++ b/dashboard/assets/style.css
@@ -63,7 +63,7 @@ body {
         top: 0;
         left: 0;
         bottom: 0;
-        width: 20rem;
+        width: 27rem; /* Change width of the sidebar*/
         text-align: left;
         transition: margin 0.3s ease-in-out;
     }
@@ -77,7 +77,7 @@ body {
 
     /* add negative margin to sidebar to achieve the collapse */
     #sidebar.collapsed {
-        margin-left: -15.5rem;
+        margin-left: -30.5rem; /* Updated margin */
         padding-right: 0.5rem;
     }
 
@@ -114,7 +114,7 @@ body {
 
     /* set margins of the main content so that it doesnt overlap the sidebar */
     #page-content {
-        margin-left: 22rem;
+        margin-left: 30rem; /* Updated margin */
         margin-right: 2rem;
         transition: margin-left 0.3s ease-in-out;
     }
