--- a/dashboard/assets/style.css
+++ b/dashboard/assets/style.css
@@ -63,7 +63,7 @@ body {
         top: 0;
         left: 0;
         bottom: 0;
-        width: 27rem; /* Change width of the sidebar*/
+        width: 24rem; /* Change width of the sidebar*/
         text-align: left;
         transition: margin 0.3s ease-in-out;
     }
@@ -77,7 +77,7 @@ body {
 
     /* add negative margin to sidebar to achieve the collapse */
     #sidebar.collapsed {
-        margin-left: -30.5rem; /* Updated margin */
+        margin-left: -20.5rem; /* Updated margin */
         padding-right: 0.5rem;
     }
 
@@ -114,7 +114,7 @@ body {
 
     /* set margins of the main content so that it doesnt overlap the sidebar */
     #page-content {
-        margin-left: 30rem; /* Updated margin */
+        margin-left: 25rem; /* Updated margin */
         margin-right: 2rem;
         transition: margin-left 0.3s ease-in-out;
     }
@@ -220,4 +220,9 @@ a:hover {
 
 .pagination .page-item.active .page-link {
     background-color: #10e84a;
+}
+/* Set the color of the active ref link (Home, simple, and advanced) */
+.nav-pills .nav-link.active {
+    color: #fff;
+    background-color: rgb(27, 147, 207);
 }
